# G1_personal

./: GPS_LOG_Collecton.docx
enhanceposition_tata/enhanceposition/adrd/: Android.mk  Makefile.am  adrd.rc  adrd.service  configure.ac  varconfig.cpp
enhanceposition_tata/enhanceposition/adrd/config/: adr_Tiago.conf  adr_Tigor.conf  adr_alt.conf  adr_punch.conf  mpe.conf
enhanceposition_tata/enhanceposition/adrd/inc/: adr_cmd.h  adr_data_convert.h  adr_data_struct.h  adr_util.h  config-parser.h  gnss_util.h  log.h  module.h  module_adr_algo_helper.h  module_daemon.h  module_gnss_helper.h  module_odom_helper.h  module_sensor_helper.h  sensors_io.h  zalloc.h
enhanceposition_tata/enhanceposition/adrd/src/: adr_data_convert.c  adr_util.c  config-parser.c  log.c  main.c  module.c  module_adr_algo.c  module_adr_algo_helper.c  module_daemon.c  module_data_store.c  module_debug.c  module_gnss.c  module_gnss_helper.c  module_odom.c  module_sanity.c  module_sensor.c  module_sensor_helper.c
gps_tata/gps/gnss_test/: Makefile.am  configure.ac
gps_tata/gps/gps_hal/: Android.mk  Makefile.am  configure.ac
gps_tata/gps/gps_hal/hardware/: gps.h
gps_tata/gps/gps_hal/inc/: geofencehal_worker.h  gps_internal.h  gpshal.h  hal2mnl_interface.h  hal_mnl_interface_common.h  mtk_auto_log.h  mtk_lbs_utility.h
gps_tata/gps/gps_hal/src/: agpsinf.c  geofenceinf.c  gfchal_mnl_interface.c  gpshal.c  gpshal_worker.c  gpsinf.c  gpsinf3337.c  hal2mnl_interface.c  hal_mnl_interface_common.c  mtk_auto_log.c  mtk_lbs_utility.c  nmea_regenerator.cpp  nmea_regenerator.h
gps_tata/gps/mtk_mnld/: Android.mk  Makefile.am  configure.ac  mnld.service
gps_tata/gps/mtk_mnld/etc/: mnl.prop  updateEPOconfig.bat  update_mnl.bat
touch_aidl_w616_sop2/proprietary/args/acdb/: Android.mk  CMakeLists.txt  acdb.spec  configure.ac
touch_aidl_w616_sop2/proprietary/args/ar_osal/: Android.mk  CMakeLists.txt  Makefile.am  ar-osal.spec  ar_osal.pc.in  configure.ac
touch_aidl_w616_sop2/proprietary/args/ar_util/: Android.mk  CMakeLists.txt  Makefile.am  ar-util.spec  configure.ac
touch_aidl_w616_sop2/proprietary/args/ats/: Android.mk  CMakeLists.txt  Makefile.am  ats.spec  configure.ac
touch_aidl_w616_sop2/proprietary/args/gpr/: Android.mk  CMakeLists.txt  Makefile.am  NOTICE  configure.ac  gpr.spec
touch_aidl_w616_sop2/proprietary/args/gsl/: Android.mk  CMakeLists.txt  Makefile.am  ar-gsl.spec  configure.ac  gsl.pc.in
touch_aidl_w616_sop2/proprietary/args/spf/: CMakeLists.txt  Makefile.am  NOTICE  configure.ac  spf.pc.in  spf.spec
touch_aidl_w616_sop2/proprietary/chi-cdk/linuxembedded/: CMakeLists.txt  common.cmake
touch_aidl_w616_sop2/proprietary/cv/fastcv/: Android.bp  Makefile.am  configure.ac  cv_vendor_product.mk  fastcv.spec
touch_aidl_w616_sop2/proprietary/display/auto-test/: Makefile.am  configure.ac
touch_aidl_w616_sop2/proprietary/hyp-video/: Makefile.am  configure.ac
touch_aidl_w616_sop2/proprietary/hyp-video/be/: Android.mk
touch_aidl_w616_sop2/proprietary/hyp-video/dvr/: Android.mk
touch_aidl_w616_sop2/proprietary/hyp-video/hyp-video-intercept/: Android.mk  Makefile.am  hyp_video_intercept.cpp  hyp_video_intercept.h
touch_aidl_w616_sop2/proprietary/hyp-video/test/: Makefile.am
touch_aidl_w616_sop2/proprietary/hyp-video/vpp/: Android.mk  CMakeLists.txt
touch_aidl_w616_sop2/proprietary/media-external/: CMakeLists.txt  media-external-product.mk
touch_aidl_w616_sop2/proprietary/media-external/media-prop/: NOTICE  init.qti.media.sh
touch_aidl_w616_sop2/proprietary/media-external/qconfig/: Android.bp  Android.mk
touch_aidl_w616_sop2/proprietary/mm-audio-headers/: Android.bp  Android.mk  Makefile.am  configure.ac  mm_audio_headers.pc.in
touch_aidl_w616_sop2/proprietary/mm-audio-headers/acdbdata/: kvh2xml.h
touch_aidl_w616_sop2/proprietary/mm-audio-headers/audio-listen/: ListenSoundModelLib.h  lsm_server_wrapper.h
touch_aidl_w616_sop2/proprietary/mm-audio-headers/audio_log_utils/: log_utils.h  log_xml_parser.h
touch_aidl_w616_sop2/proprietary/mm-audio-headers/capiv2_api/: capi_v2_extn.h
touch_aidl_w616_sop2/proprietary/mm-audio-headers/gsl_fe/: gsl_intf.h  gsl_shmem_mgr.h  gsl_subgraph_driver_props.h
touch_aidl_w616_sop2/proprietary/mm-audio-headers/surround_rec_interface/: surround_rec_interface.h
touch_aidl_w616_sop2/proprietary/securemsm/: Makefile.am  configure.ac
touch_aidl_w616_sop2/proprietary/securemsm/GPTEE_Sample_client/: Android.mk
touch_aidl_w616_sop2/proprietary/securemsm/QHCK/: Android.mk
touch_aidl_w616_sop2/proprietary/securemsm/c2pa/: Android.mk
touch_aidl_w616_sop2/proprietary/securemsm/config/: cpz_vendor_proprietary_board.mk  cpz_vendor_proprietary_product.mk  diagcommd_vendor_proprietary_board.mk  gp_vendor_proprietary_board.mk  gp_vendor_proprietary_product.mk  gpqese_vendor_proprietary_board.mk  gpqese_vendor_proprietary_product.mk  identity_vendor_proprietary_board.mk  keymaster_vendor_proprietary_board.mk  keymaster_vendor_proprietary_product.mk  ndk_vendor_proprietary_board.mk  ndk_vendor_proprietary_product.mk  qseecomcompat_vendor_proprietary_board.mk  qseecomd_vendor_proprietary_product.mk  smcinvoke_vendor_proprietary_board.mk  smcinvoke_vendor_proprietary_product.mk
touch_aidl_w616_sop2/proprietary/securemsm/cryptfshw_common/: Android.mk
touch_aidl_w616_sop2/proprietary/securemsm/daemon/: Android.mk  Makefile.am  listenerMngr.cpp  qseecomd.c
touch_aidl_w616_sop2/proprietary/securemsm/diag_daemon/: Android.mk
touch_aidl_w616_sop2/proprietary/securemsm/drm_sample_app/: Android.mk
touch_aidl_w616_sop2/proprietary/securemsm/esehal/: Android.mk
touch_aidl_w616_sop2/proprietary/securemsm/keymaster_install_toolbox/: Android.mk  DeviceIdProvision.cpp  VerifyAttestation.cpp
touch_aidl_w616_sop2/proprietary/securemsm/keymaster_utils/: Android.mk  cppbor.cpp  cppbor.h  openssl_utils.h  remote_provisioning_utils.cpp
touch_aidl_w616_sop2/proprietary/securemsm/peripheralStateUtils/: Android.mk
touch_aidl_w616_sop2/proprietary/securemsm/rpmbClient/: Android.mk
touch_aidl_w616_sop2/proprietary/securemsm/sampleclient/: Android.mk
(+4506 files in other folders)
